# Competitions

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  openapi.yaml
.github/workflows/: docker.yml
src/: competitions.rs  main.rs  models.rs  scrapers.rs
