[package]
name = "comp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
mongodb = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1.0"
